added project descriptions

--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
         </div>
 
         <div class="d-flex justify-content-center p-0 fade-in">
-            <a type="button" id="all-btn" class="curved-btn">All</a>
-            <a type="button" id="work-btn" class="curved-btn">Work Experience</a>
-            <a type="button" id="project-btn" class="curved-btn">Projects</a>
-            <a type="button" id="activity-btn" class="curved-btn">Activities</a>
+            <a type="button" id="all-btn" class="curved-btn fade-in">All</a>
+            <a type="button" id="work-btn" class="curved-btn fade-in">Work Experience</a>
+            <a type="button" id="project-btn" class="curved-btn fade-in">Projects</a>
+            <a type="button" id="activity-btn" class="curved-btn fade-in">Activities</a>
         </div>
 
         <div class="container">
@@ -95,7 +95,9 @@
                         <div class="overlay d-flex flex-column justify-content-center align-items-center p-2">
                             <h1>REHLATIE</h1>
                             <p>Unity, C#, uGUI</p>
-                            <p class="project-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur non error, maiores magnam officiis saepe ipsa deserunt explicabo, architecto ipsam perferendis numquam, quidem voluptate earum placeat autem ut? Provident, quis!</p>
+                            <p class="project-desc">
+                                Contributed to developing an app called 'Rehlatie' created with Unity3D game engine using C#. Designed and added 2 entirely new screens to the app using uGUI. Recreated one screen design using UI Toolkit. Fixed app bugs related to API calls, calendar implementation, navigation system, UI design, and localized strings.
+                            </p>
                         </div>
                     </div>
                 </a>
@@ -106,7 +108,8 @@
                         <div class="overlay d-flex flex-column justify-content-center align-items-center p-2">
                             <h1>ATARI</h1>
                             <p>Unity, C#</p>
-                            <p class="project-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur non error, maiores magnam officiis saepe ipsa deserunt explicabo, architecto ipsam perferendis numquam, quidem voluptate earum placeat autem ut? Provident, quis!</p>
+                            <p class="project-desc">A Unity 2D game developed using C# and inspired by the
+                                River Raid game.</p>
                         </div>
                     </div>
                 </a>
@@ -117,7 +120,10 @@
                         <div class="overlay d-flex flex-column justify-content-center align-items-center p-2">
                             <h1>BETA</h1>
                             <p>Unity, C#</p>
-                            <p class="project-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur non error, maiores magnam officiis saepe ipsa deserunt explicabo, architecto ipsam perferendis numquam, quidem voluptate earum placeat autem ut? Provident, quis!</p>
+                            <p class="project-desc">Developed the game on Unity, designed the game characters
+                                and objects, developed moving and shooting mechanics,
+                                created animations for characters, and developed AI enemies
+                                that shoot back at the player.</p>
                         </div>
                     </div>
                 </a>
@@ -128,7 +134,7 @@
                         <div class="overlay d-flex flex-column justify-content-center align-items-center p-2">
                             <h1>CLIMBSAFE</h1>
                             <p>Java, JavaFX, Gherkin, JUnit, UML</p>
-                            <p class="project-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur non error, maiores magnam officiis saepe ipsa deserunt explicabo, architecto ipsam perferendis numquam, quidem voluptate earum placeat autem ut? Provident, quis!</p>
+                            <p class="project-desc">Created a climbing trip booking system in a team using Java, Umple code generation. Designed the GUI using JavaFX. Built tests for the system using Gherkin step definitions, Cucumber, and JUnit.</p>
                         </div>
                     </div>
                 </a>
@@ -139,7 +145,8 @@
                         <div class="overlay d-flex flex-column justify-content-center align-items-center p-2">
                             <h1>CODEPEN</h1>
                             <p>HTML, CSS</p>
-                            <p class="project-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur non error, maiores magnam officiis saepe ipsa deserunt explicabo, architecto ipsam perferendis numquam, quidem voluptate earum placeat autem ut? Provident, quis!</p>
+                            <p class="project-desc">Completed the freeCodeCamp.org Responsive Web Design Developer
+                                Certification. Finished projects can be seen here.</p>
                         </div>
                     </div>
                 </a>
@@ -150,7 +157,8 @@
                         <div class="overlay d-flex flex-column justify-content-center align-items-center p-2">
                             <h1>CRAZY BABY</h1>
                             <p>Unity, C#</p>
-                            <p class="project-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur non error, maiores magnam officiis saepe ipsa deserunt explicabo, architecto ipsam perferendis numquam, quidem voluptate earum placeat autem ut? Provident, quis!</p>
+                            <p class="project-desc">A Unity 2D game developed using C# and inspired by the
+                                Flappy Bird game.</p>
                         </div>
                     </div>
                 </a>
@@ -161,7 +169,18 @@
                         <div class="overlay d-flex flex-column justify-content-center align-items-center p-2">
                             <h1>EMAIL WRITER</h1>
                             <p>HTML, CSS, JavaScript, NodeJS</p>
-                            <p class="project-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur non error, maiores magnam officiis saepe ipsa deserunt explicabo, architecto ipsam perferendis numquam, quidem voluptate earum placeat autem ut? Provident, quis!</p>
+                            <p class="project-desc">Implemented an interactive AI chatbot utilizing OpenAI's GPT-3.5-turbo model. Designed a server-side application using Node.js, enabling secure handling of API requests and responses between the front-end and OpenAI's API. Crafted a user-friendly front-end interface for the chatbot using HTML, CSS, and JavaScript.</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://github.com/mn297/ecse211-team09" class="project-img">
+                    <div class="img-container fade-in rounded">
+                        <img class="image" src="images/agape.png" alt="">
+                        <div class="img-shadow"></div>
+                        <div class="overlay d-flex flex-column justify-content-center align-items-center p-2">
+                            <h1>AGAPÉ AGAPE</h1>
+                            <p>Python</p>
+                            <p class="project-desc">Created an autonomous cube-delivery robot using LEGOs, Raspberry Pi, BrickPi, and Python. Developed movement, dispensing, and color detection algorithms. Assisted the hardware team in designing and building the robot.</p>
                         </div>
                     </div>
                 </a>
@@ -172,7 +191,7 @@
                         <div class="overlay d-flex flex-column justify-content-center align-items-center p-2">
                             <h1>ROBOGAMES</h1>
                             <p>Arduino</p>
-                            <p class="project-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur non error, maiores magnam officiis saepe ipsa deserunt explicabo, architecto ipsam perferendis numquam, quidem voluptate earum placeat autem ut? Provident, quis!</p>
+                            <p class="project-desc">Developed a robot in a team of four that detects the fire in one of four randomly placed rooms and puts it out. Managed the software part using Arduino Uno and participated in the hardware implementation.</p>
                         </div>
                     </div>
                 </a>
@@ -183,7 +202,7 @@
                         <div class="overlay d-flex flex-column justify-content-center align-items-center p-2">
                             <h1>STORIKO</h1>
                             <p>Java, UML, Postgres, Hibernate, SpringBoot, Gradle, JUnit, Heroku, Vue.js, Android Studio</p>
-                            <p class="project-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur non error, maiores magnam officiis saepe ipsa deserunt explicabo, architecto ipsam perferendis numquam, quidem voluptate earum placeat autem ut? Provident, quis!</p>
+                            <p class="project-desc">Created an interactive website and an android application using the Agile approach and GitHub for Version Control in a team. Developed the system using Java using SpringBoot as a framework, designed the website using HTML, CSS, JavaScript, Bootstrap, and Vue.js, and used Heroku as a cloud platform to run our website.</p>
                         </div>
                     </div>
                 </a>
@@ -194,7 +213,7 @@
                         <div class="overlay d-flex flex-column justify-content-center align-items-center p-2">
                             <h1>TAEKWONDO</h1>
                             <p></p>
-                            <p class="project-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur non error, maiores magnam officiis saepe ipsa deserunt explicabo, architecto ipsam perferendis numquam, quidem voluptate earum placeat autem ut? Provident, quis!</p>
+                            <p class="project-desc">Participated in 20+ championships. Won 30+ medals.</p>
                         </div>
                     </div>
                 </a>
@@ -205,7 +224,7 @@
                         <div class="overlay d-flex flex-column justify-content-center align-items-center p-2">
                             <h1>SOCCER</h1>
                             <p></p>
-                            <p class="project-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur non error, maiores magnam officiis saepe ipsa deserunt explicabo, architecto ipsam perferendis numquam, quidem voluptate earum placeat autem ut? Provident, quis!</p>
+                            <p class="project-desc">Participated in McGill intermurals tournaments in multiple semesters.</p>
                         </div>
                     </div>
                 </a>
