changed about profile picture

--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
         </div>
         <div class="d-flex align-items-center">
             <div class="row about-container">
-                <div class="col d-flex justify-content-end fade-in">
+                <div class="col d-flex justify-content-end align-items-center fade-in">
                     <div>
                         <div class="profile-pic shifted-border"></div>
                     </div>
                 </div>
         
-                <div class="col d-flex justify-content-start">
+                <div class="col d-flex justify-content-start align-items-center">
                     <p class="about-content fade-in">
                         I'm a Software Engineering student at McGill University and have been in the coding world for over five years. Outside of coding, I have a creative side that loves to draw, and I also enjoy challenging my strategic thinking with chess. Not just confined to the intellectual realm, I'm also a professional Taekwondo player and have proudly participated in numerous championships, winning many medals along the way. I consider myself to be determined and always keen on learning new things. I'm enthusiastic about learning, growing, and applying my varied skills wherever I can.
                     </p>
